unreleased changes
==================

- fixed IOC-210 Typed Factory Facility treats constructor dependency as non-optional if resolved as a TFF component

- Reverted back (to the way it was in v2.1) conditional registration of helper components used by TypedFactoryFacility as it would cause issues when used with nested containers (see the new test and thread "Typed Factories in sub Container (differences between 2.5 and 2.1)" on users group)

- fixed bug where count of potentially misconfigured components would show invalid value

- added raw handler access to default component view in debugger

- changed how status message is displayed for potentially misconfigured components so that an actual visualizer for strings can be used to view this potentially long piece of text

2.5.0 (2010-08-21)
==================

- debugger view support has been extracted to a separate subsystem (IContainerDebuggerExtensionHost) and can be extended by users code via IContainerDebuggerExtension and IComponentDebuggerExtension

- calling IHandler.TryStart will no longer silently ignore all the exceptions.

- added CollectionResolver which is a more general version of ArrayResolver and ListResolver and supports in addition ICollection<Foo> and IEnumerable<Foo>

- fixed issue where dependencies would not be cleaned up when component creation failed

- fixed issue where startable component would be created twice when property dependency could not be resolved

- passing arguments to ILazyComponentLoader (see breakingchanges.txt)

- fixed bug that caused exception when proxied component and it's proxied property dependency shared interceptor

2.5.0 beta2 (2010-07-21)
==================

- added support for selecting components based on custom attributes and their properties. See Component.HasAttribute<T>() methods

- added WithService.DefaultInterface() to fluent API.IT matches Foo to IFoo, SuperFooExtended to IFoo and IFooExtended etc
